apps/me/prod/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: me
spec:
  template:
    metadata:
      name: me
    spec:
      containers:
      - name: me
        imagePullPolicy: Always
