apps/me/prod/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: me
  labels:
    app: me
    role: frontend
spec:
  type: ClusterIP
  selector:
    app: me
    role: frontend
  ports:
  - name: http
    port: 80
    targetPort: 1313
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: me
  labels:
    app: me
    role: frontend
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: resume.hugocortes.me
    http:
      paths:
      - backend:
          serviceName: me
          servicePort: http
